# rglib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-linux-release.yml  cmake-macos-release.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cmake-windows-release.yml
Foundation/: CMakeLists.txt
Foundation/include/rglib/: beatpos.h  constants.h  note.h  notesplit.h  songinfo.h  songinfo.hpp
Foundation/src/: beatpos.cpp  chartinfo.cpp  notesplit.cpp  songinfo.cpp  songpos.cpp
Foundation/tests/: CMakeLists.txt  main.cpp
Foundation/tests/src/: beatpos_test.cpp
examples/: CMakeLists.txt  typing_tempo.cpp
examples/data/TypingTempo/: 05.json  songinfo.json
include/rglib/: beatpos.h  chartinfo.h  constants.h  core.h  fileformat.h  notesplit.h  rglib.h  section.h  sequenceitem.h  songinfo.h  songpos.h  timeinfo.h
src/: beatpos.cpp  chartinfo.cpp  section.cpp  sequenceitem.cpp  songinfo.cpp  songpos.cpp  timeinfo.cpp
tests/: CMakeLists.txt
tests/data/: chartinfo.json  songinfo.ini  songinfo.json
tests/src/: beatpos_test.cpp  chartinfo_test.cpp  section_test.cpp  sequenceitem_test.cpp  songinfo_test.cpp  timeinfo_test.cpp
